--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "mongoose": "^6.8.2",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
+  },
+  "devDependencies": {
+    "supertest": "^6.3.3"
   }
 }
